Update links for v2 launch

--- a/docs/src/_layouts/skeleton.erb
+++ b/docs/src/_layouts/skeleton.erb
@@ -24,7 +24,7 @@
 
   <link rel="stylesheet" href="<%= asset_path :css %>" />
 
-  <script src="<%= links.v2.demo_home %>/lookbook-assets/js/lookbook.js" defer></script>
+  <script src="<%= links.demo_home %>/lookbook-assets/js/lookbook.js" defer></script>
   <script src="https://unpkg.com/alpinejs@3.12.0/dist/cdn.min.js" defer></script>
   <script src="<%= asset_path :js %>" defer></script>
     
