--- a/docs/src/_pages/index.erb
+++ b/docs/src/_pages/index.erb
@@ -203,8 +203,8 @@ lookbook_embeds: true
           <div class="sm:flex items-center gap-6 justify-center mt-8 md:mt-10">
             <%= button "User guide", guide_url(:introduction), icon: :book_open, class: "order-1 sm:order-2" %>
             <div class="order-2 sm:contents mt-4 flex items-center justify-center gap-6">
-              <%= button "Demo site", links.v2.demo, icon: :monitor, theme: :secondary, size: :sm, class: "order-2 sm:order-1" %>
-              <%= button "Github Repo", links.v2.repo, icon: :github, theme: :secondary, size: :sm, class: "order-3" %>
+              <%= button "Demo site", links.demo, icon: :monitor, theme: :secondary, size: :sm, class: "order-2 sm:order-1" %>
+              <%= button "Github Repo", links.repo, icon: :github, theme: :secondary, size: :sm, class: "order-3" %>
             </div>
           </div>
         </div>
