--- a/docs/src/_partials/_header.erb
+++ b/docs/src/_partials/_header.erb
@@ -24,11 +24,11 @@
               <span><%= section[:label] %></span>
             </a>
           <% end %>
-          <a href="<%= links.v2.demo %>" target="_blank" class="flex items-center space-x-2">
+          <a href="<%= links.demo %>" target="_blank" class="flex items-center space-x-2">
             <span>Demo</span>
             <%= icon :external_link, size: 3, class: "text-gray-600" %>
           </a>
-          <a href="<%= links.v2.repo %>" target="_blank">
+          <a href="<%= links.repo %>" target="_blank">
             <%= image "icons/brands/github.svg", class: "w-5 h-5" %>
           </a>
         </nav>
