--- a/docs/src/_partials/_mobile_nav.erb
+++ b/docs/src/_partials/_mobile_nav.erb
@@ -29,12 +29,12 @@
     <h3 class="font-extralight text-2xl mb-4 text-indigo-600 pb-2 border-b border-gray-300">Elsewhere</h3>
     <ul class="space-y-2">
       <li>
-        <a href="<%= links.v2.demo %>" class="opacity-60 hover:opacity-100">
+        <a href="<%= links.demo %>" class="opacity-60 hover:opacity-100">
           Lookbook Demo
         </a>
       </li>
       <li>
-        <a href="<%= links.v2.repo %>" class="opacity-60 hover:opacity-100">
+        <a href="<%= links.repo %>" class="opacity-60 hover:opacity-100">
           Github Repo
         </a>
       </li>
