--- a/app/views/lookbook/404.html.erb
+++ b/app/views/lookbook/404.html.erb
@@ -3,11 +3,11 @@
     <%= icon  :alert_triangle, size: 10, class: "text-red-300 mx-auto" %>
     <div class="mt-3">
       <h5 class="text-base">
-        <%== message %>
+        <%= message %>
       </h5>
       <% if defined?(description) %>
         <p class="mt-2 opacity-50 text-sm">
-          <%== description %>
+          <%= description %>
         </p>
       <% end %>
     </div>
