--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -1446,13 +1446,24 @@ pre[class*="language-"] {
 }
 
 [data-component="embed-code-dropdown"] [data-component="code"] {
-  padding: 0;
+  border-style: dashed;
+  border-width: 1px;
+  border-color: var(--lookbook-divider);
+  background-color: var(--lookbook-base-50);
+  padding: .5rem;
 }
 
 [data-component="embed-code-dropdown"] pre.code.highlight {
   white-space: normal;
   padding: 0;
   font-size: 11px;
+  overflow: hidden;
+}
+
+[data-component="embed-code-dropdown"] .line-clamp-2 {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
   overflow: hidden;
 }
 
@@ -1928,6 +1939,10 @@ select.compact {
   right: 18px;
 }
 
+.right-px {
+  right: 1px;
+}
+
 .top-0 {
   top: 0;
 }
@@ -1950,6 +1965,10 @@ select.compact {
 
 .top-\[40px\] {
   top: 40px;
+}
+
+.top-px {
+  top: 1px;
 }
 
 .\!z-\[1000\] {
@@ -2082,6 +2101,13 @@ select.compact {
   margin-top: 2rem;
 }
 
+.line-clamp-2 {
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  overflow: hidden;
+}
+
 .\!block {
   display: block !important;
 }
@@ -2202,8 +2228,8 @@ select.compact {
   width: 1.25rem;
 }
 
-.w-\[320px\] {
-  width: 320px;
+.w-\[360px\] {
+  width: 360px;
 }
 
 .w-\[9px\] {
@@ -2501,6 +2527,10 @@ select.compact {
   white-space: pre-wrap;
 }
 
+.break-all {
+  word-break: break-all;
+}
+
 .rounded-full {
   border-radius: 9999px;
 }
@@ -2553,6 +2583,10 @@ select.compact {
   border-top-width: 1px;
 }
 
+.border-dashed {
+  border-style: dashed;
+}
+
 .\!border-lookbook-header-border {
   border-color: var(--lookbook-header-border) !important;
 }
@@ -2564,10 +2598,6 @@ select.compact {
 
 .border-lookbook-divider {
   border-color: var(--lookbook-divider);
-}
-
-.border-lookbook-dropdown-divider {
-  border-color: var(--lookbook-dropdown-divider);
 }
 
 .border-lookbook-page-header-border {
@@ -2644,6 +2674,10 @@ select.compact {
 
 .bg-gray-100\/80 {
   background-color: #f3f4f6cc;
+}
+
+.bg-lookbook-base-50 {
+  background-color: var(--lookbook-base-50);
 }
 
 .bg-lookbook-button-bg {
@@ -2831,10 +2865,6 @@ select.compact {
   padding-bottom: 3rem;
 }
 
-.pb-3 {
-  padding-bottom: .75rem;
-}
-
 .pb-6 {
   padding-bottom: 1.5rem;
 }
@@ -2881,10 +2911,6 @@ select.compact {
 
 .pt-2\.5 {
   padding-top: .625rem;
-}
-
-.pt-3 {
-  padding-top: .75rem;
 }
 
 .pt-8 {
@@ -3201,6 +3227,10 @@ select.compact {
 
 .duration-200 {
   transition-duration: .2s;
+}
+
+.duration-300 {
+  transition-duration: .3s;
 }
 
 .ease-in-out {
@@ -4082,6 +4112,10 @@ select.compact {
 .focus-visible\:outline-none:focus-visible {
   outline-offset: 2px;
   outline: 2px solid #0000;
+}
+
+.group:hover .group-hover\:opacity-100 {
+  opacity: 1;
 }
 
 .prose-headings\:font-semibold :where(h1, h2, h3, h4, h5, h6, th):not(:where([class~="not-prose"] *)) {
