docs(embeds): embed docs improvements, add section with info on adding to third party services

--- a/app/components/lookbook/embed_code_dropdown/component.html.erb
+++ b/app/components/lookbook/embed_code_dropdown/component.html.erb
@@ -37,7 +37,7 @@
       <h4 class="text-[11px] uppercase tracking-wider font-bold">Embed URL</h4>
       <span class="ml-auto" >
         <a
-          href="https://lookbook.build/guide/sharing/embeds"
+          href="https://lookbook.build/guide/sharing/embeds#other-services"
           target="_blank"
           title="Help"
           class="text-lookbook-prose underline opacity-70 hover:opacity-100">
