fix: Replace Alpine `@` event shorthand with regular attribute name style

--- a/app/components/lookbook/button/component.html.erb
+++ b/app/components/lookbook/button/component.html.erb
@@ -2,8 +2,8 @@
   id: id,
   icon: icon,
   **button_attrs,
-  "@keydown.esc.stop": "hideDropdown",
-  "@navigation:complete.window": "updateDropdown") do %>
+  "x-on:keydown.esc.stop": "hideDropdown",
+  "x-on:navigation:complete.window": "updateDropdown") do %>
   <%= content %>
 <% end %>
 
