--- a/app/components/lookbook/copy_button/component.html.erb
+++ b/app/components/lookbook/copy_button/component.html.erb
@@ -2,7 +2,7 @@
   name: "copy-button",
   **button_attrs,
   "x-data": prepare_alpine_data,
-  "@click.prevent": "copyToClipboard" do |button| %>
+  "x-on:click.prevent": "copyToClipboard" do |button| %>
   <% button.with_icon name: icon, size: icon_size, "x-show": "!copied", cloak: true %>
   <% button.with_icon name: :check, size: icon_size, class: "text-green-500", "x-show": "copied", cloak: true %>
   <% if content %>
