--- a/app/components/lookbook/viewport/component.html.erb
+++ b/app/components/lookbook/viewport/component.html.erb
@@ -32,13 +32,13 @@
         style="<%= "max-height: #{@max_height}px;" if @max_height.present? %>"
         src="<%= @src %>"
         frameborder="0"
-        @load="$dispatch('viewport:loaded', {viewport: this})"
+        x-on:load="$dispatch('viewport:loaded', {viewport: this})"
         title="viewport"></iframe>
         <% if @resize_width %>
           <div
             class="resize-handle border-r border-t border-lookbook-divider cursor-[col-resize] <%= "border-b" unless @resize_height %>"
-            @pointerdown="onResizeWidthStart"
-            @dblclick="toggleFullWidth">
+            x-on:pointerdown="onResizeWidthStart"
+            x-on:dblclick="toggleFullWidth">
             <svg class="h-4 w-4 pointer-events-none" fill="currentColor" viewBox="0 0 24 24">
               <path d="M8 5h2v14H8zM14 5h2v14h-2z"></path>
             </svg>
@@ -47,8 +47,8 @@
         <% if @resize_height %>
           <div
             class="resize-handle border-b border-l border-lookbook-divider cursor-[row-resize] <%= "border-r" unless @resize_width %>"
-            @pointerdown="onResizeHeightStart"
-            @dblclick="toggleFullHeight">
+            x-on:pointerdown="onResizeHeightStart"
+            x-on:dblclick="toggleFullHeight">
             <svg class="h-4 w-4 pointer-events-none rotate-90" fill="currentColor" viewBox="0 0 24 24" >
               <path d="M8 5h2v14H8zM14 5h2v14h-2z"></path>
             </svg>
@@ -57,8 +57,8 @@
         <% if @resize_height && @resize_width %>
           <div
             class="resize-handle border-r border-b border-lookbook-divider cursor-[nwse-resize]"
-            @pointerdown="onResizeStart"
-            @dblclick="toggleFullSize">
+            x-on:pointerdown="onResizeStart"
+            x-on:dblclick="toggleFullSize">
             <svg class="h-3.5 w-3.5 pointer-events-none rotate-45 relative -top-px -left-px" fill="currentColor" viewBox="0 0 24 24" >
               <path d="M8 5h2v14H8zM14 5h2v14h-2z"></path>
             </svg>
