--- a/app/views/lookbook/inspector/inputs/_text_two_step.html.erb
+++ b/app/views/lookbook/inspector/inputs/_text_two_step.html.erb
@@ -1,12 +1,12 @@
 <div x-data="{changed: false, applyChange(){ this.value = this.$refs.input.value; this.changed = false; }}">
 
-  <div @change.stop="changed = ($event.target.value !== value)" class="flex items-center gap-2">
+  <div x-on:change.stop="changed = ($event.target.value !== value)" class="flex items-center gap-2">
     <%= text_field_tag(name, value,
       **input_options,
       type: input,
       class: "flex-grow",
       "x-ref": "input",
-      "@keydown.enter.stop": "applyChange"
+      "x-on:keydown.enter.stop": "applyChange"
     ) %>
 
     <%= lookbook_render :button,
@@ -14,6 +14,6 @@
       tooltip: "Apply changes",
       class: "flex-none !bg-lookbook-button-bg hover:!bg-lookbook-button-bg-hover rounded-md !text-lookbook-button-text",
       "x-show": "changed",
-      "@click": "applyChange" %>
+      "x-on:click": "applyChange" %>
   </div>
 </div>
