--- a/app/components/lookbook/debug_menu/component.html.erb
+++ b/app/components/lookbook/debug_menu/component.html.erb
@@ -6,7 +6,7 @@
           <a href="#"
             class="text-xs flex items-center hover:underline"
             x-data="clipboardComponent"
-            @click.prevent.stop="copyToClipboard('#debug-data')">
+            x-on:click.prevent.stop="copyToClipboard('#debug-data')">
             <span x-show="copied" x-cloak>
               <%= icon :check, size: 2.5, class: "text-green-600" %>
             </span>
@@ -20,7 +20,7 @@
       <li>
         <a href="#"
           class="text-xs flex items-center hover:underline"
-          @click.stop="localStorage.clear(); window.location.reload();">
+          x-on:click.stop="localStorage.clear(); window.location.reload();">
           <%= icon :refresh_cw, size: 2.5 %>
           <span class="ml-2">Reset local storage</span>
         </a>
