--- a/app/components/lookbook/dimensions_display/component.html.erb
+++ b/app/components/lookbook/dimensions_display/component.html.erb
@@ -1,9 +1,9 @@
 <%= render_component_tag class: "flex items-center text-xs font-mono space-x-1 transition",
   ":class":"{'!opacity-100': resizing}",
-  "@viewport:resize-start.window": "resizing = true",
-  "@viewport:resize-complete.window": "resizing = false",
-  "@dom:update-start.window": "tearDown",
-  "@dom:update-complete.window": "createObserver",
+  "x-on:viewport:resize-start.window": "resizing = true",
+  "x-on:viewport:resize-complete.window": "resizing = false",
+  "x-on:dom:update-start.window": "tearDown",
+  "x-on:dom:update-complete.window": "createObserver",
   "x-show": "target" do %>
     <span x-text="`${width}px`"></span>
     <span class="opacity-70">x</span>
