--- a/app/components/lookbook/filter/component.html.erb
+++ b/app/components/lookbook/filter/component.html.erb
@@ -7,10 +7,10 @@
       x-ref="input"
       x-model="<%= @model %>"
       x-effect="$dispatch('filter:change', { text, filter: this })"
-      @keydown.esc.stop="clear"
-      @keydown.f.window="if (!($event.shiftKey || $event.metaKey || $event.ctrlKey || $event.altKey)) { focus(); $event.preventDefault(); $event.stopPropagation(); }"
-      @keydown.stop>
-      <button class="text-lookbook-icon-button-stroke hover:text-lookbook-icon-button-stroke-hover focus:ring-0 focus:outline-none absolute top-1/2 right-3 -translate-y-1/2" @click="clear" :class="{hidden: !active}">
+      x-on:keydown.esc.stop="clear"
+      x-on:keydown.f.window="if (!($event.shiftKey || $event.metaKey || $event.ctrlKey || $event.altKey)) { focus(); $event.preventDefault(); $event.stopPropagation(); }"
+      x-on:keydown.stop>
+      <button class="text-lookbook-icon-button-stroke hover:text-lookbook-icon-button-stroke-hover focus:ring-0 focus:outline-none absolute top-1/2 right-3 -translate-y-1/2" x-on:click="clear" :class="{hidden: !active}">
         <%= icon  :x, size: 3 %>
       </button>
   </div>
