--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -3,10 +3,10 @@
     id="app"
     x-data="app"
     x-cloak
-    @popstate.window="handleNavigation"
-    @click.document="hijax"
-    @navigation:start="closeMobileSidebar"
-    @dom:update-complete.window="Lookbook.initEmbeds()"
+    x-on:popstate.window="handleNavigation"
+    x-on:click.document="hijax"
+    x-on:navigation:start="closeMobileSidebar"
+    x-on:dom:update-complete.window="Lookbook.initEmbeds()"
     class="w-screen h-screen grid grid-rows-[40px_1fr] relative">
 
     <%= render "lookbook/partials/user_styles" %>
@@ -29,7 +29,7 @@
             'translate-x-full': $store.layout.mobile && sidebarHidden,
             '!absolute right-0 bottom-0 top-[40px] h-[calc(100%_-_40px)] w-full max-w-[420px] z-[1001] border-l border-lookbook-divider': $store.layout.mobile
           }",
-          "@click.outside": "closeMobileSidebar",
+          "x-on:click.outside": "closeMobileSidebar",
           cloak: true do %>
 
           <%= lookbook_render :split_layout,
@@ -50,7 +50,7 @@
                       <%= lookbook_render :button_group, size: :xs do |group| %>
                         <% group.with_button icon: :minus_square,
                           tooltip: "Collapse all",
-                          "@click": "closeAll" %>
+                          "x-on:click": "closeAll" %>
                       <% end %>
                     <% end %>
                   <% end %>
@@ -73,7 +73,7 @@
                       <%= lookbook_render :button_group, size: :xs do |group| %>
                         <% group.with_button icon: :minus_square,
                           tooltip: "Collapse all",
-                          "@click": "closeAll" %>
+                          "x-on:click": "closeAll" %>
                       <% end %>
                     <% end %>
                   <% end %>
