--- a/public/lookbook-assets/css/lookbook.css
+++ b/public/lookbook-assets/css/lookbook.css
@@ -1524,7 +1524,7 @@ pre[class*="language-"] {
   display: flex;
 }
 
-@media (min-width: 480px) {
+@media (width >= 480px) {
   [data-component="message"] {
     padding: 1.5rem;
   }
@@ -1556,7 +1556,7 @@ pre[class*="language-"] {
   display: none;
 }
 
-@media (min-width: 480px) {
+@media (width >= 480px) {
   [data-component="message"] .message-icon {
     display: block;
   }
@@ -3840,7 +3840,7 @@ select.compact {
   background-color: #0000;
 }
 
-@media (min-width: 1024px) {
+@media (width >= 1024px) {
   .lg\:prose-base {
     font-size: 1rem;
     line-height: 1.75;
@@ -4130,7 +4130,7 @@ select.compact {
   color: var(--lookbook-prose-link);
 }
 
-@media (min-width: 480px) {
+@media (width >= 480px) {
   .xs\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -4154,13 +4154,13 @@ select.compact {
   }
 }
 
-@media (min-width: 640px) {
+@media (width >= 640px) {
   .sm\:p-8 {
     padding: 2rem;
   }
 }
 
-@media (min-width: 768px) {
+@media (width >= 768px) {
   .md\:-mr-\[2px\] {
     margin-right: -2px;
   }
@@ -4189,7 +4189,7 @@ select.compact {
   }
 }
 
-@media (min-width: 1024px) {
+@media (width >= 1024px) {
   .lg\:mb-8 {
     margin-bottom: 2rem;
   }
