--- a/spec/dummy/test/components/docs/11_no_toc_on_html.html.erb
+++ b/spec/dummy/test/components/docs/11_no_toc_on_html.html.erb
@@ -6,12 +6,5 @@ toc: true
 
 # Introduction
 
-Table of Contents test page
+<p>Table of Contents test page</p>
 
-## Section 1
-
-### Subsection 1
-
-### Subsection 2
-
-## Section 2
