Fix accessibility issues
The Lookbook UI had a few accessibility issues flagged by [axe], an
accessibility testing tool:

Problem: Buttons must have discernible text
Element: Button that opens the debug menu in the app header
Ref: https://dequeuniversity.com/rules/axe/4.6/button-name
Solution: Provide a tooltip, which is used as the button’s accessible
name

Problem: IDs of active elements must be unique
Element: The two ‘show drawer’ buttons
Ref: https://dequeuniversity.com/rules/axe/4.6/duplicate-id-active
Solution: Give each button a unique ID

Problem: Zooming and scaling must not be disabled
Ref: https://dequeuniversity.com/rules/axe/4.6/meta-viewport
Solution: Remove `maximum-scale=1.0` and `user-scalable=0` from the
`viewport` metadata

[axe]: https://www.deque.com/axe

--- a/app/views/lookbook/inspector/show.html.erb
+++ b/app/views/lookbook/inspector/show.html.erb
@@ -63,7 +63,7 @@
               tooltip: "Open preview in new window",
               target: "_blank" %>
 
-            <% group.with_button id: "show-drawer-button",
+            <% group.with_button id: "show-vertical-drawer-button",
               icon: "sidebar",
               tooltip: "Show drawer",
               "x-on:click": "$store.inspector.drawer.hidden = false",
@@ -71,7 +71,7 @@
               "x-show": "$store.inspector.drawer.hidden && vertical",
               cloak: true %>
 
-            <% group.with_button id: "show-drawer-button",
+            <% group.with_button id: "show-bottom-drawer-button",
               icon: "credit-card",
               tooltip: "Show drawer",
               "x-on:click": "$store.inspector.drawer.hidden = false",
