--- a/app/components/lookbook/header/component.html.erb
+++ b/app/components/lookbook/header/component.html.erb
@@ -29,6 +29,7 @@
         <% if @debug_menu %>
           <% group.with_button id: "debug-menu-button",
             icon: :help_circle,
+            tooltip: "Debug info",
             class: "!text-lookbook-header-text", "x-show": "!loading" do |button| %>
             <% menu = lookbook_render :debug_menu,
               version: Lookbook::VERSION,
@@ -50,8 +51,8 @@
           "x-show": "$store.layout.mobile && !sidebarHidden",
           "x-on:keydown.esc.window": "closeMobileSidebar",
           class: "!text-lookbook-header-text" %>
-      <% end %>    
+      <% end %>
     <% end %>
   <% end %>
-  
+
 <% end %>
