Add search/filter input for pages

--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -79,6 +79,7 @@
                           <% end %>
                         <% end %>
                       <% end %>
+                        <% nav.with_filter store: "$store.nav.pages.filter", placeholder: "Filter pages by name&hellip;" %>  
                     <% end %>
                   <% end %>
                 <% end %>
