Add config options to enable/disable preview and page search boxes

--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -56,7 +56,9 @@
                           <% end %>
                         <% end %>
                       <% end %>
-                      <% nav.with_filter store: "$store.nav.previews.filter", placeholder: "Filter previews by name&hellip;" %>
+                      <% if @config.preview_search %>
+                        <% nav.with_filter store: "$store.nav.previews.filter", placeholder: "Filter previews by name&hellip;" %>
+                      <% end %>
                     <% end %>
                   <% end %>
                 <% end %>
@@ -79,7 +81,9 @@
                           <% end %>
                         <% end %>
                       <% end %>
+                      <% if @config.page_search %>
                         <% nav.with_filter store: "$store.nav.pages.filter", placeholder: "Filter pages by name&hellip;" %>  
+                      <% end %>
                     <% end %>
                   <% end %>
                 <% end %>
