--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -1,1 +1,19 @@
-<%= yield %>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  
+  <title>Lookbook</title>
+</head>
+<body>  
+  <%= yield %>
+  
+  <script>
+    const source = new EventSource("<%= updates_path %>");
+    source.addEventListener("update", (event) => {
+      location.reload()
+    });
+  </script>
+</body>
+</html>
