--- a/assets/entrypoints/app.css
+++ b/assets/entrypoints/app.css
@@ -1,3 +1,6 @@
 @import "npm:@shoelace-style/shoelace/dist/themes/light.css";
 @import "../css/reset.css";
+@import "../css/tokens.css";
 @import "../css/base.css";
+
+/* @import "../css/components/app.css"; */
