--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -5,6 +5,12 @@
   box-sizing: border-box;
 }
 
+html,
+body {
+  padding: 0;
+  margin: 0;
+}
+
 /* Prevent font size inflation */
 html {
   -moz-text-size-adjust: none;
