--- a/app/views/lookbook/application/_sidebar.html.erb
+++ b/app/views/lookbook/application/_sidebar.html.erb
@@ -1,7 +1,7 @@
 <sl-tree>
   <% previews.each do |preview| %>
     <sl-tree-item>
-      <%= preview.class_name %>
+      <a href="<%= inspector_path(preview) %>"><%= preview.class_name %></a>
     </sl-tree-item>
   <% end %>
 </sl-tree>
