--- a/app/views/lookbook/application/_sidebar.html.erb
+++ b/app/views/lookbook/application/_sidebar.html.erb
@@ -1,6 +1,6 @@
 <sl-tree>
   <% previews.each do |preview| %>
-    <sl-tree-item>
+    <sl-tree-item x-data <%= "selected" if url_for == inspector_path(preview) %>>
       <a href="<%= inspector_path(preview) %>"><%= preview.class_name %></a>
     </sl-tree-item>
   <% end %>
